Reformatted code, cleaned unused imports. Also moved secret key for jwt to properties